tdf#119050 sfx2 store: don't inherit temp file permissions when overwriting

The too aggressive error handling in commit
fb04780cf8523ad4e900ae8b9cecbe7a2697a12a (tdf#116117 sfx2 store: don't
inherit temp file permissions when renaming, 2018-03-12) means that if
the file is already there, then we don't try to stat() it; even if there
is no problem with that.

Change-Id: Ie0b9084064834e339bcae3ad7b4a35c54cb9d3c2